--- a/ldms/scripts/examples/aggl2.4
+++ b/ldms/scripts/examples/aggl2.4
@@ -1,5 +1,5 @@
 load name=${storename}
-config name=${storename} path=${STOREDIR} altheader=0 container=${storename}
+config name=${storename} path=${STOREDIR} altheader=0
 
 prdcr_add name=localhost2 host=localhost type=active xprt=${XPRT} port=${port2} interval=1000000
 prdcr_start name=localhost2
