--- a/ldms/man/pll-ldms-static-test.man
+++ b/ldms/man/pll-ldms-static-test.man
@@ -1,31 +1,40 @@
-.\" Manpage for ldms-static-test.sh
+.\" Manpage for pll-ldms-static-test.sh
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 8 "18 Sep 2018" "v4.1" "ldms-static-test.sh man page"
+.TH man 8 "19 Feb 2019" "v4.2" "pll-ldms-static-test.sh man page"
 
 .SH NAME
-ldms-static-test.sh \- Run a canned test scenario
+pll-ldms-static-test.sh \- Run a canned test scenario under slurm.
 
 .SH SYNOPSIS
 .PP
-ldms-static-test.sh -l
+pll-ldms-static-test.sh -l
 .PP
-ldms-static-test.sh -h
+pll-ldms-static-test.sh -h
 .PP
-ldms-static-test.sh <input_file> [test_dir]
+pll-ldms-static-test.sh -b
+.PP
+pll-ldms-static-test.sh <input_file> [test_dir]
 
 .SH DESCRIPTION
-The ldms-static-test.sh command starts a canned test defined in the input_file
+The pll-ldms-static-test.sh command starts a canned test defined in the input_file
 using a standard environment. The input file is written in a simple bash macro
 language described in LANGUAGE below. Supporting configuration file fragments
 will be used, as determined from the input file. See FILES below.
 This tests ldmsd run with static configuration files (as would normally
 happen as a system service) and shut down with a signal.
 
+The pll-ldms-static-test.sh command is expected to be driven in a Slurm sbatch script or interactively on nodes obtained with salloc.
+
 .SH OPTIONS
 .TP
 -l
 .br
-List the canned tests available.
+List the canned tests available. Each canned test has a corresponding
+sbatch script. See FILES below for the location of these.
+.TP
+-b
+.br
+Get the expected sbatch file location for the test.
 .TP
 -h
 .br
@@ -40,7 +49,7 @@ Other bash use is also possible, but not recommended.
 DAEMONS <daemon-numbers>
 .br
 Give all the numbers that will be used in the  LDMSD invocations anywhere in the test.
-This causes port variables to be defined so that any daemon can connect to any other by referencing $portN as explained in ENVIRONMENT below. If omitted, the ordering and aggregation relationships of LDMSD calls may be infeasible.
+This causes port variables to be defined so that any daemon can connect to any other by referencing $portN as explained in ENVIRONMENT below. If omitted, the ordering and aggregation relationships of LDMSD calls may be infeasible. In parallel execution, the Nth daemon will run as the (N-1)th slurm task, since Slurm numbers tasks from 0 and this tool numbers tasks from 1.
 .TP
 LDMSD [conf-options] <daemon-numbers>
 .br
@@ -67,6 +76,13 @@ SLEEP <n>
 .br
 Sleeps n seconds and logs a message about it.
 .TP
+SEC_LEFT
+.br
+Prints the amount of seconds left in the Slurm job time limit. If time is
+unlimited, a default of 600 is returned since tests should never be allowed
+infinite time. This can be used to manage test with sleep time dependent
+on the requested job time limit.
+.TP
 JOBDATA jobfile [daemon-numbers]
 .br
 Creates jobfile with data for the jobid plugin to parse.
@@ -83,13 +99,13 @@ vgoff
 .br
 Turns off use of valgrind for any ldmsd or ldms_ls subsequently started.
 .TP
-file_created <filename>
+file_created <filename> <daemon numbers>
 .br
-Verifies the existence and readability of filename.
+Verifies the local existence and readability of filename for the listed daemon(s).
 .TP
-rollover_created <filename>
+rollover_created <filename> <daemon numbers>
 .br
-Verifies the existence and readability of rollover files matching pattern filename.[0-9]*.
+Verifies the local existence and readability of rollover files matching pattern filename.[0-9]* for the listed daemon(s).
 .TP
 bypass=<0,1>
 .br
@@ -102,7 +118,7 @@ portbase=<K>
 The listening port numbers assigned to the daemons will be K+i, where i is as described for
 macro LDMSD. It is a good idea (to support automated testing) if portbase is set
 in <input_file> so that each test uses a unique range of ports. This enables tests
-to proceed in parallel.
+to proceed in parallel on the same node.
 
 .SH CONFIGURATION OPTIONS
 
@@ -122,11 +138,11 @@ The location of looped prolog files is handled as are the test input files. See 
 .TP
 -c
 .br
-Where multiple daemon numbers are specified, the input generated for the first number is cloned to all subsequent daemons. See FILES. This allows a single file to serve many similar daemon instances in scale testing.
+Where multiple daemon numbers are specified, the input generated for the first number is cloned to all subsequent daemons. See FILES. This allows a single input file to serve many similar daemon instances in scale testing.
 .TP
 -s <wait_microseconds>
 .br
-After an ldmsd is started, wait wait_microseconds before checking for the daemon PID file to exist. The appropriate wait time is variable depending on the complexity of the configuration. If not specified, the default is 2 seconds wait time.
+After an ldmsd is started, wait wait_microseconds before checking for the daemon PID file to exist. The appropriate wait time is variable depending on the complexity of the configuration. If not specified, the default is 2 seconds wait time. If the command usleep is not available, 0 wait is applied and work continues.
 
 .SH ENVIRONMENT
 The following variables can be set in the script to affect the launch of ldmsd:
@@ -154,6 +170,11 @@ i
 Daemon configuration files and commands can refer to ${i} where i is the
 integer daemon number supplied via LDMSD for the specific
 daemon using the script.
+.TP
+hostN
+.br
+Daemon configuration files and commands can refer to ${hostN} where N is any
+value of 'i' described above. hostN is the network hostname for the N-th daemon.
 .TP
 portN
 .br
@@ -203,20 +224,31 @@ For each value of i specifed to start an ldmsd, a configuration file named
 $input_file.$i must also exist. This configuration file is used when starting the daemon.
 
 Exception: For any single "LDMSD -c <daemon-numbers>", only $input_file.$i for the first listed number is needed; the first file will be used for all subsequent numbers and any matching files except the first are ignored. Where prologs are also specified, the regular prolog inclusion process is applied to the first file.
+.TP
+.I sbatch.$input_file
+.br
+Submitting the canned test $input_file listed with pll-ldms-static-test.sh is easily done with
+
+sbatch $(pll-ldms-static-test.sh -b $input_file)
+
+Which will give the full path to the batch file for test $input_file.
+
 
 .TP
 .I [test_dir]
 .br
 If test_dir is supplied, it is used as the test output directory.
-The default output location is `pwd`/ldmstest/$testname.
+The default output location is `pwd`/ldmstest/$testname/$SLURM_JOBID.$SLURM_CLUSTER_NAME.$SLURM_NTASKS.
+It is the user's job to ensure test_dir is a globally writable directory
+in the cluster before pll-ldms-static-test.sh is run by the sbatch job script.
 .TP
-.I $docdir/examples/static-test/$input_file
+.I $docdir/examples/slurm-test/$input_file
 .br
-If input_file is not found in the current directory, it is checked for in $docdir/examples/static-test/$input_file.
+If input_file is not found in the current directory, it is checked for in $docdir/examples/slurm-test/$input_file.
 .SH GENERATED FILES
 .TP
 .I $test_dir/logs/vg.$k.%p
-.br
+.b
 The valgrind log for the kth daemon with PID %p, if valgrind is active.
 .TP
 .I $test_dir/logs/$k.txt
@@ -231,10 +263,23 @@ The input for the kth daemon.
 .br
 The root of store output locations.
 .TP
-.I $test_dir/run/ldmsd/secret
+.I $test_dir/run/ldmsd/secret.$SLURM_JOBID
 .br
 The secret file for authentication.
 
+.SH EXAMPLE
+With the ldms bin directory in your path, submit a job with
+.nf
+sbatch -n 16 --nodes=4 \\
+--time=1 \\
+--account=MUALN1 \\
+--job-name=ldms-demo \\
+-p debug \\
+$(pll-ldms-static-test.sh -b cluster)
+.if
+.PP
+.PP
+The slurm options shown here override the defaults listed in the sbatch input file to run with 16 daemons on 4 nodes for 1 minute. The defaults are site specific, but the example 'cluster' is coded to run on any number of nodes with any number of tasks >= 3. Adding more tasks adds more data producers. Specifying more tasks than nodes assigns daemons round-robin to available nodes. The options specified with --account, and partition (-p) are site specific.
 
 .SH SEE ALSO
-seq(1)
+seq(1), sbatch(1), srun(1)
